--- a/jogo/src/game2/game.css
+++ b/jogo/src/game2/game.css
@@ -61,22 +61,26 @@
 .jogo { 
     width: 100vw;
     height: 100vh;
+    background-image: url(images/jogo.jpg);
+    /* background-size: cover; */
     background-color: rgb(17, 15, 15);
     color: #fff;
     overflow: auto;
 }
 .perguntas {
     position: relative;
-    margin-top: 17.5vh;
+    margin-top: 28.5vh;
     margin-left: 3vw;
     width: 45vw;
-    height: 45vh;
+    /* height: 45vh; */
     word-wrap: break-word;
     overflow: auto;
     user-select: none;
+    background-color: rgba(17, 15, 15, 0.301);
     /* background-color: blue; */
 }
 .filosofos {
+  margin-top: 50px;
   width: 33vw;
   height: 12vh;
   margin-left: 10.5vw;
@@ -94,12 +98,28 @@
   align-items: center;
   text-align: center;
 }
+
+.filosofo:hover{
+  background-color: rgb(255,255,255, 0.300)
+}
+#certo {
+  color: #00c853;
+}
+#certo:hover {
+  color: #2e7d32;
+}
+
+#errado {
+  color: #f44336;
+}
+#errado:hover {
+  color: #d32f2f;
+}
 .alternativas {
   width: 35vw;
-  height: 30vh;
   float: right;
   margin-right: 5vw;
-  margin-top: -30vh;
+  margin-top: -11vh;
   user-select: none;
 }
 .endGame {
@@ -107,12 +127,14 @@
   height: 100vh;
   background-color: rgb(17, 15, 15);
   color: #fff;
-  overflow: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   font-family: 'Roboto', sans-serif;
   font-size: 50px;
+  text-align: center;
+  user-select: none;
+
 }
 .alternativa {
   font-family: 'Roboto', sans-serif;
@@ -121,11 +143,13 @@
 .alternativa:hover {
   color:  rgb(184, 143, 143);
 }
-
+#exit:hover{
+  color:  rgb(184, 143, 143);
+}
 h1 {
   font-family: 'Roboto', sans-serif;
   font-size: 42px;
-  padding: 25px;
+  padding: 5px;
 }
 p {
   font-family: 'Roboto', sans-serif;
